# cpp

./: .gitignore
advancedCpp/hw1/: CMakeLists.txt  README.md  main.cpp
advancedCpp/hw2/: README.md
advancedCpp/hw2/_task1/: CMakeLists.txt  main.cpp
advancedCpp/hw2/_task2/: main.cpp
algorithms/hw1/: README.md
algorithms/hw1/_task2/: CMakeLists.txt  main.cpp
algorithms/hw2/: README.md
algorithms/hw2/_task1/: CMakeLists.txt  main.cpp
algorithms/hw2/_task2/: main.cpp
algorithms/hw3/: README.md
algorithms/hw3/_task1/: CMakeLists.txt  main.cpp  main.h
algorithms/hw3/_task2/: CMakeLists.txt  main.cpp  main.h
algorithms/hw3/_task3/: extended_array.h  main.cpp
algorithms/hw4/: README.md
algorithms/hw4/_task1/: CMakeLists.txt  main.cpp  main.h
algorithms/hw4/_task2/: main.cpp  main.h
algorithms/hw4/_task3/: main.cpp  main.h
algorithms/hw5/: README.md
algorithms/hw5/_task1/: CMakeLists.txt  heap.cpp  heap.h  main.cpp  main.h
algorithms/hw5/_task2/: CMakeLists.txt  heap.cpp  heapWalk.cpp  heapWalk.h  main.cpp  main.h
algorithms/hw6/: README.md
algorithms/hw6/_task1/: CMakeLists.txt  main.cpp  main.h
algorithms/hw6/_task2/: CMakeLists.txt  main.cpp  main.h  realHash.h
algorithms/hw6/_task3/: CMakeLists.txt  main.cpp  main.h  rabinKarp.cpp  rabinKarp.h  realHash.cpp  simpleHash.cpp  simpleHash.h
algorithms/hw7/: README.md
algorithms/hw7/_task1/: CMakeLists.txt  dfs.cpp  dfs.h  main.cpp  main.h  queue.cpp  queue.h
algorithms/hw7/_task2/: CMakeLists.txt  bfs.cpp  bfs.h  main.cpp  main.h  queue  queue.cpp  queue.h
algorithms/hw7/_task3/: dfs  dfs.cpp  dfs.h  input.txt  main.cpp
algorithms/hw7/_task4/: CMakeLists.txt  dfs.cpp  dfs.h  main.cpp  main.h
algorithms/hw8/: README.md
algorithms/hw8/_task1/: CMakeLists.txt  dfs  dfs.cpp  dfs.h  main.cpp  main.h
algorithms/hw8/_task2/: dfs.cpp  dfs.h  input.txt  main.cpp
algorithms/hw8/_task3/: CMakeLists.txt  dijkstra  dijkstra.cpp  dijkstra.h  heap  heap.cpp  heap.h  input  input.txt  main.cpp  main.h
baseprogramming/: .gitignore
baseprogramming/hw1/: README.md  task1  task1.cpp  task2  task2.cpp  task3  task3.cpp
baseprogramming/hw10/_task1/: CMakeLists.txt  main.cpp
baseprogramming/hw10/_task1/greeter/: greeter.cpp  greeter.h
baseprogramming/hw10/_task2/: CMakeLists.txt
baseprogramming/hw10/_task3/: CMakeLists.txt  main.cpp
baseprogramming/hw10/_task3/leaver/: leaver.h
baseprogramming/hw11/: README.md
baseprogramming/hw11/_task1/: extended_array.h  main.h
baseprogramming/hw11/_task2/: CMakeLists.txt  extended_array.h  main.cpp
baseprogramming/hw11/_task3/: extended_array.h  main.h
baseprogramming/hw2/: README.md  task1  task1.cpp  task2  task2.cpp
baseprogramming/hw3/: README.md  task1.cpp
baseprogramming/hw3/_task1/: task1.cpp
baseprogramming/hw3/_task2/: out.txt  task2.cpp
baseprogramming/hw4/: README.md
baseprogramming/hw4/_task1/: task1.cpp
baseprogramming/hw4/_task2/: task2.cpp
baseprogramming/hw4/_task3/: task3.cpp
baseprogramming/hw5/: README.md
baseprogramming/hw5/_task1/: main  main.cpp  math.cpp  math.h
baseprogramming/hw5/_task2/: counter.cpp  counter.h  main  main.cpp  mian
baseprogramming/hw5/_task3/: equilateralTriangle.cpp  equilateralTriangle.h  figure.cpp  figure.h  main  main.cpp  parallelogram.h  quadangle.cpp  quadangle.h  rightTriange.h  rightTriangle.cpp  rum.h  square.cpp
baseprogramming/hw6/: README.md
baseprogramming/hw6/_task1/: main.cpp
baseprogramming/hw6/_task2/: main.cpp
baseprogramming/hw7/: README.md
baseprogramming/hw7/_task1/: main.cpp
baseprogramming/hw7/_task2/: equilateralTriangle.cpp  equilateralTriangle.h  exception.cpp  exception.h  figure.cpp  figure.h  isoscelesTriangle.cpp  isoscelesTriangle.h  main.cpp  parallelogram.cpp  parallelogram.h  quadangle.cpp  quadangle.h  rectangle.cpp  rectangle.h  rightTriangle.cpp  rightTriangle.h  rum.cpp  (+5 more)
baseprogramming/hw8/: README.md
baseprogramming/hw9/: README.md
baseprogramming/hw9/_task2/: CMakeLists.txt  isoscelesTriangle.cpp  isoscelesTriangle.h  main.cpp  parallelogram.cpp  rectangle.cpp  rectangle.h  rum.cpp  square.h  triangle.cpp  triangle.h
baseprogramming/project/: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  main.h
baseprogramming/project/menu/: menu.cpp  menu.h
baseprogramming/project/mymenu/: mymenu.cpp  mymenu.h
baseprogramming/project/processor/: processor.cpp  processor.h
baseprogramming/project/vehicle/: vehicle.cpp  vehicle.h
baseprogramming/project/vehicle/air/: air.cpp  air.h  plane.cpp  plane.h
baseprogramming/project/vehicle/ground/: ground.cpp  ground.h
courseWork/: README.md  in.txt  solve  solve.cpp
hw1/: README.md  main  main.cpp
hw10/: README.md  task1  task1.cpp  task2  task2.cpp  task3  task3.cpp
hw11/: task1  task1.cpp  task2  task2.cpp
hw12/: README.md  out_mass.txt  task1  task1.cpp  task2  task2.cpp  task3  task3.cpp  task4  task4.cpp
hw13/: README.md
hw14/: README.md
hw2/: README.md  main  task1.cpp  task2  task2.cpp
hw3/: task1  task1.cpp  task2  task2.cpp  task3  task3.cpp  task4  task4.cpp
hw4/: README.md  task1  task1.cpp  task2.cpp  task3  task3.cpp
hw5/: README.md  task1  task1.cpp  task2  task2.cpp  task3  task3.cpp  task4  task4.cpp
hw6/: README.md  fibc  fibr  task1  task1.cpp  task2  task2.cpp  task3  task3_cycle  task3_cycle.cpp  task3_recur.cpp  task4  task4.cpp
hw7/: task1  task1.cpp  task2  task2.cpp
hw8/: README.md  task1  task1.cpp  task2  task2.cpp
hw9/: README.md  task1  task1.cpp  task2  task2.cpp  task3  task3.cpp
(+7 files in other folders)
